--- a/views/nuevoPassword.hbs
+++ b/views/nuevoPassword.hbs
@@ -1,15 +1,41 @@
-<form class="form-register" method="POST">
-    <h4>Ingresa tu nueva contraseña</h4>
-
-            <p>Has solicitado el cambio de tu contraseña anterior. Ingresa una nueva</p>
-            <br>
-            <br>
-    <input class="controls" type="password"  placeholder="Contraseña" name="password" required>
-    
-    
-    
-    <button class="botons">Cambiar</button>
 
 
-    <p>E-clothes© 2020</p> 
-  </form>
+
+  {{!-- Formulario de  nueva contrañeña --}}
+
+
+    <div class="container-login100"
+  style="background-image: url('https://media.istockphoto.com/photos/two-cheerful-girls-shopping-for-clothes-picture-id670741276?k=6&m=670741276&s=170667a&w=0&h=uG-t6x5vlzS20EtPe7hbY1284zT_6HK1u_pHxY0hhQQ=');">
+
+  <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
+
+    <div class="errores" id="errores">
+      {{>showMessages messages}}
+    </div>
+
+    <form class="login100-form validate-form" method="POST" >
+      <span class="login100-form-title p-b-37">
+       Ingresa tu nueva contraseña
+      </span>
+
+      <div class="wrap-input100 validate-input m-b-20" data-validate="Enter password">
+        <input class="input100" type="password" id="inputPassword" name="password"  placeholder="Ingresa una contraseña" required="">
+        <span class="focus-input100"></span>
+      </div>
+
+    
+
+      <div class="container-login100-form-btn">
+        <button class="login100-form-btn" >
+          Cambiar contraseña
+        </button>
+      </div>
+
+     <p class="mt-5 mb-3 text-muted">E-clothes© 2020</p>
+
+    </form>
+
+  </div>
+
+
+</div>
