--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,14 @@
 
 
+/*Inicio titulo*/
+
+
+/*Fin titulo*/
+
+
+
+
+
 
 
 * {
@@ -25,7 +34,7 @@
   
 }
 
-.footer {
+.footerPago {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -33,6 +42,8 @@
 	height: 85px;
 	background-color: #f5f5f5;
 }
+
+
 
 .totalpagar{
 	margin:0px auto;
@@ -51,11 +62,28 @@
 	border-color:red;
 }
 
-.textoperfil{
-	margin-top:10px ;
+.perfil button{
+	background-color: black;
+	color: white;
+
+
+}
+
+.textoperfil h1{
+	margin-top:50px ;
+	text-align:center;
+	font-weight: bold;
+
+	
+
+}
+
+.textoperfil p{
+	margin-left: 30%;
+	margin-top:40px ;
 	text-align:justify;
-	width: 70%;
-	height: 300px;
+	width: 50%;
+	height: 50px;
 
 }
 
@@ -123,6 +151,20 @@
   line-height: 40px;
 }
 
+.containerUno{
+	background-color: #FFFFFF;
+	border-radius: 10px;
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	position: relative;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
+	min-height: 480px;
+
+
+
+}
+
 .form-register a {
   color: white;
   text-decoration: none;
@@ -131,6 +173,14 @@
 .form-register a:hover {
   color: white;
   text-decoration: underline;
+}
+
+.comprasBtn button{
+background-color:black;
+color: white;
+
+margin-left: 600px;
+
 }
 
 .form-register .botons {
@@ -154,6 +204,15 @@ font-family: Georgia, 'Times New Roman', Times, serif;
   height:70px;
 font-size: 48px;
 padding-left: 100px;
+}
+
+.btnEclothes{
+	
+	width: 300px;
+	background-color: white;
+	height: 53px;
+text-align:center;
+font-size: 45px;
 
 }
 
@@ -3618,6 +3677,9 @@ iframe {
 	right: 0px;
 	bottom: 0px;
 }
+
+
+
 
 
 /*fin de iniciar sesion*/
