--- a/public/css/stylesxD.css
+++ b/public/css/stylesxD.css
@@ -8,7 +8,7 @@
   
   html,
   body {
-    background: #eee5e9;
+    background: #ffffff;
   }
   
   header {
@@ -49,7 +49,7 @@
   
   
   .product, .product--blue {
-    box-shadow: 1px 5px 15px #ccc;
+    box-shadow: 1px 5px 15px rgb(0, 0, 0);
     width: 15em;
     height: auto;
     border-radius: 3px;
@@ -61,13 +61,15 @@
             flex: auto;
   }
   .product--blue {
-    background: linear-gradient(-45deg, #6bcec1 50%, rgba(255, 255, 255, 0.5) 50%);
+    background: linear-gradient(-45deg, #ffffff 50%, rgba(255, 255, 255, 0.5) 50%);
+    margin-left: 100px;
   }
   
   .product img, .product--blue img, .product--orange img, .product--red img, .product--green img, .product--yellow img, .product--pink img {
-    max-width: 100%;
-    height: auto !important;
+    width: 150px;
+    height: 200px;
     text-align: center;
+    
   }
   .product_inner {
     display: -webkit-box;
@@ -82,7 +84,7 @@
     color: rgba(255, 255, 255, 0.9);
   }
   .product_inner button {
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 0, 0, 0.5);
     color: #fff;
     border-radius: 3px;
     padding: 1em 3em;
@@ -91,24 +93,26 @@
     cursor: pointer;
     -webkit-transition: background ease-in 0.25s;
     transition: background ease-in 0.25s;
+    
   }
   .product_inner button:hover {
-    background: white;
-    color: #2b2d42;
+    background: rgb(0, 0, 0);
+    color: #ffffff;
   }
   .product_inner button:before {
     font-family: FontAwesome;
     content: "\f07A";
-    color: #fff;
+    color: rgb(255, 0, 0);
     position: absolute;
     font-size: 1.5em;
     margin: 0 -1.5em;
+    
   }
   .product_inner button:hover:before {
-    color: #2b2d42;
+    color: #ff0000;
   }
   .product_overlay {
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 0, 128, 0.9);
     width: 100%;
     height: 100%;
     position: absolute;
