--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -5,39 +5,52 @@
 {{#if login}}
 {{#if producto}}
 
-    <div class="row add-row">
-        
-            {{#each producto}}
+<div class="row add-row">
 
-            <div class='col-md-4 col-sm-4'>
-                <div class='product--blue'>
-                    <div class='product_inner'>
-                        <p style="color: black;">Cantidad: {{qty}}</p>
-                        <img src='../uploads/products/{{item.pictures.[0]}}' width='300'>
-                        <p>{{item.nombre}}</p>
-                        <p>Talla: {{item.talla}}</p>
-                        <p>L. {{item.precio}}</p>
-                        <button ><a href="/eliminar/{{this.item._id}}">Eliminar</a></button>
-                        <button ><a href="/reducir/{{this.item._id}}">Reducir 1</a></button>
+    {{#each producto}}
 
-                    </div>
-                    <div class='product_overlay'>
-                        <h2>Eliminar</h2>
-                        <i class='fa fa-check'></i>
-                    </div>
-                </div>
+    <div class='col-md-4 col-sm-4'>
+        <div class='product--blue'>
+            <div class='product_inner'>
+                <p style="color: black;">Cantidad: {{qty}}</p>
+                <img src='../uploads/products/{{item.pictures.[0]}}'  >
+                <h5 style="color: rgb(0, 0, 0); font-family:'Times New Roman', Times, serif;">{{item.nombre}}</h5>
+                <p style="color: rgb(70, 68, 68);">Talla: {{item.talla}}</p>
+                <p style="color: rgb(70, 68, 68);">L. {{item.precio}}</p>
+                <button><a href="/eliminar/{{this.item._id}}">Eliminar</a></button>
+                <button><a href="/reducir/{{this.item._id}}">Reducir 1</a></button>
 
             </div>
+            <div class='product_overlay'>
+                <h2>Eliminar</h2>
+                <i class='fa fa-check'></i>
+            </div>
+        </div>
 
-            {{/each}}
-        
     </div>
+
+    {{/each}}
+
+</div>
 
 
 <br>
 
 
-<div id="paypal-button"></div>
+
+<br>
+<div class="footerPago">
+
+    <div class="totalpagar">
+
+        <p style="font-family:  inherit; font-size: 20px; color:black;">Total: {{this.precioTotal}} HNL</p>
+
+    </div>
+
+
+    <div class="realizarC">
+
+       <div id="paypal-button"></div>
 <br>
 <br>
 <br>
@@ -68,7 +81,7 @@
             return actions.payment.create({
                 transactions: [{
                     amount: {
-                        total: {{ precioTotal }},
+                        total: {{ precioTotal}}/25,
                 currency: 'USD'
             }
     }],
@@ -89,22 +102,9 @@
   }, '#paypal-button');
 
 </script>
-<br>
-<div class="footer">
 
-<div class="totalpagar">
-   
-        <p style="font-family:  inherit; font-size: 20px; color:black;">Total: {{this.precioTotal}} HNL</p>
-    
-</div>
-
-
-<div class="realizarC">
-    
-        <button type="button" class="btn" style="background-color: rgba(236, 125, 227, 0.829); color:blanchedalmond;">Realizar compra</button>
-    
-</div>
-<br>
+    </div>
+    <br>
 </div>
 
 {{else}}
@@ -126,39 +126,58 @@
 
 {{else}}
 {{#if producto}}
-<div class="row">
-    <div class="col-sm-6 col-md-6 col-md-ofsset-3 col-sm-offset-3">
-        <ul class="list-group">
-            {{#each producto}}
-            <li class="list-group-item">
-                <span class="badge badge-dark">{{qty}}</span>
-                <strong>{{item.nombre}}</strong>
-                <img src="../uploads/products/{{item.pictures.[0]}}" alt="Imagen del producto"
-                    style="max-width: 500px; max-height:350px;">
-                <span class="label label-success">L. {{item.precio}}</span>
-                <div class="btn-group">
-                    <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Acción
-                        <span class="caret"></span></button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Quitar 1</a></li>
-                        <li><a href="#">Quitar todos</a></li>
-                    </ul>
-                </div>
-            </li>
+<div class="row add-row">
 
-            {{/each}}
-        </ul>
+    {{#each producto}}
+
+    <div class='col-md-4 col-sm-4'>
+        <div class='product--blue'>
+            <div class='product_inner'>
+                <p style="color: black;">Cantidad: {{qty}}</p>
+                <img src='../uploads/products/{{item.pictures.[0]}}' width='300'>
+                <h5 style="color: rgb(0, 0, 0); font-family:'Times New Roman', Times, serif;">{{item.nombre}}</h5>
+                <p style="color: rgb(70, 68, 68);">Talla: {{item.talla}}</p>
+                <p style="color: rgb(70, 68, 68);">L. {{item.precio}}</p>
+                <button><a href="/eliminar/{{this.item._id}}">Eliminar</a></button>
+                <button><a href="/reducir/{{this.item._id}}">Reducir 1</a></button>
+
+            </div>
+            <div class='product_overlay'>
+                <h2>Eliminar</h2>
+                <i class='fa fa-check'></i>
+            </div>
+        </div>
+
     </div>
+
+    {{/each}}
+
 </div>
-<div class="row">
-    <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-        <strong>Total: {{this.precioTotal}}</strong>
-    </div>
-</div>
+
+
+<br>
+
+
+
+<br>
+
 
 <strong>Para realizar la compra debes iniciar sesión</strong>
 
-<div class="footer ">
+<div class="footerPago ">
+
+<div class="totalpagar">
+
+        <p style="font-family:  inherit; font-size: 20px; color:black;">Total: {{this.precioTotal}} HNL</p>
+
+    </div>
+
+
+    
+    <br>
+
+
+
 
 </div>
 
@@ -176,7 +195,7 @@
 <div class="caja">
 
 
-    <img src="https://static.vecteezy.com/system/resources/previews/001/343/889/non_2x/vertical-empty-photo-frame-on-white-wall-in-room-free-vector.jpg"
+    <img src="https://static.zara.net/static//common/images/empty-basket/empty-basket.jpg"
         alt="Imagen del producto" style="width: 995px;
 	height: 490px;">
 
