--- a/views/gracias.hbs
+++ b/views/gracias.hbs
@@ -1,11 +1,9 @@
-<h1>
-    <br>
-    <br>
-    <br>
-    <br>
+ <br>
+ <br>
+ <br>
+ 
+   <link href="/css/stylesGracias.css" rel="stylesheet">
 
-    <br>
-    
-    Gracias por su compra
+ <h1 class="elegantshadow">Gracias por su compra!</h1>
 
-</h1>
+
