--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -22,7 +22,7 @@
 <body class="{{typePage}} full-screen sidebar-collapse">
   <!--Inicio del navbar-->
   <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand" href="/" style="color: black;">e-clothes</a>
+     <a class="btnEclothes" href="/" style="color: black;">e-clothes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
