--- a/views/mostrarProducto.hbs
+++ b/views/mostrarProducto.hbs
@@ -25,25 +25,30 @@
         <div class="col-md-7 col-sm-6">
           <div class="container">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"
-    style="width: 400px; padding-left: 30px; ">
+    style="width:500px; padding-left: 30px; ">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" style="margin: 0px auto;">
-      <div class="carousel-item active">
-        <img class="d-block w-60" src="../uploads/products/{{producto.pictures.[0]}}" alt="First slide"
-          style="max-width: 620px; max-height: 389px; margin: 0px auto;">
-      </div>
-      <div class="carousel-item" >
+    
+       <div class="carousel-item active" >
+          
+        <img id="myimage" class="d-block w-60" src="../uploads/products/{{producto.pictures.[0]}}" alt="First slide"
+          style="width: 400px; height: 389px; margin: 0px auto;">
+          
+         
+        </div>
+       <div class="carousel-item" >
         <img class="d-block w-60" src="../uploads/products/{{producto.pictures.[1]}}" alt="Second slide"
-          style="max-width: 620px; max-height: 389px; margin: 0px auto;" >
-      </div>
-      <div class="carousel-item">
+          style="width: 400px; height: 389px; margin: 0px auto;" >
+       </div>
+        <div class="carousel-item">
         <img class="d-block w-60" src="../uploads/products/{{producto.pictures.[2]}}" alt="Third slide"
-          style="max-width: 620px; max-height: 389px; margin: 0px auto;">
-      </div>
+          style="width: 400px; height: 389px; margin: 0px auto;">
+        </div>
+      
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="background-color: rgba(181, 119, 189, 0.363);" >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -57,15 +62,15 @@
 
 </div>
         </div>
-        <div class="col-md-5 col-sm-6">
+        <div class="col-md-5 col-sm-5">
           <h2>{{producto.nombre}}</h2>
-          <h4 class="price"><strong>L {{producto.precio}}</strong></h4>
+          <h4 class="price"><strong>L. {{producto.precio}}</strong></h4>
           <hr />
           <p>{{producto.descripcion}}</p>
           
           <hr />
 
-        <h6>Talla:  <span class="icon-danger">*</span></h6>
+        <h6>Talla:*</span></h6>
               <div class="form-check-radio">
                 <label class="form-check-label">
                   <input class="form-check-input" type="radio" name="talla" id="tallaS" value="{{producto.talla}}" >
@@ -80,24 +85,27 @@
                   <span class="form-check-sign"></span>
                 </label>
               </div>
-            </div>
-            <div class="form-check-radio">
+
+                 <div class="form-check-radio">
                 <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="talla" id="tallaL" value="{{producto.talla}}" >
+                  <input class="form-check-input" type="radio" name="talla" id="tallaM" value="{{producto.talla}}">
                   L
                   <span class="form-check-sign"></span>
                 </label>
               </div>
-
-
-          <div class="row">
-            <div class="col-md-7 offset-md-5 col-sm-8">
+<div class="col-md-7 offset-md-5 col-sm-8">
               <a href="/carrito/{{producto._id}}" class="btn btn-danger-btn-block-btn-round" style="background-color: #bd59d4; color:white" >Agregar al carrito</a>
             </div>
-          </div>
+            </div>
+             
+
+
+          
         </div>
+      
       </div>
     </div>
   </div>
 </div>
 
+<script src="/js/zoom.js"></script>
