Vista de Manual de usuario y Nuevos productos definitivos

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -76,6 +76,11 @@
             <a href="/perfil" class="dropdown-item">
               Perfil
             </a>
+            <div class="dropdown-divider"></div>
+            <a href="/manualUsuario" class="dropdown-item">
+              Manual de usuario
+            </a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/cerrar-sesion">
               Cerrar sesión
             </a>
