--- a/views/ventas.hbs
+++ b/views/ventas.hbs
@@ -5,12 +5,18 @@
 <br>
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-          <section class="hero">
+        
+
+        <section class="hero">
         <div class="hero__content">
-            <h2 class="hero__heading">Mis compras</h2>
+            <h2 class="hero__heading">Ventas</h2>
             
         </div>
     </section>
+
+
+
+
         <hr>
      
   
@@ -26,7 +32,7 @@
                 <h7>Correo electrónico:  {{orden.email}}</h7>
                     <br>
                 <br>
-                <h7>Cantidad de productos: {{orden.cart.cantidadTotal}}</h7>
+                 <h7>Cantidad de productos: {{orden.cart.cantidadTotal}}</h7>
                 <h7>Precio Total: {{orden.cart.precioTotal}} HNL</h7>
 
                      </div>
@@ -35,8 +41,7 @@
                 <br>
                 <br>
                </div>
-
-       
+               
             {{/each}}
             </div>
 
