--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,10 +19,12 @@
   <title>eclothes</title>
 </head>
 
-<body class="search-page sidebar-collapse">
-  {{!-- Navbar --}}
-  <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="btnEclothes" href="/" style="color: black;">e-clothes</a>
+<body >
+  {{!-- Navbar 
+--}}
+  <nav class="navbar navbar-expand-lg navbar-light " >
+    <a class="btnEclothes" href="/" style="color: rgb(255, 255, 255); background-color: #89e7e391
+;">e-clothes</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -58,6 +60,10 @@
           <div class="dropdown-divider"></div>
               <a href="/productos-usuario" class="dropdown-item">
                 Eliminar productos
+              </a>
+              <div class="dropdown-divider"></div>
+              <a href="/ventas" class="dropdown-item">
+                Ventas
               </a>
             </div>
          
@@ -97,8 +103,6 @@
       </ul>
     </div>
   </nav>
-
-
 
 
 
