--- a/views/buscar.hbs
+++ b/views/buscar.hbs
@@ -4,7 +4,7 @@
 
 
 <link href="/css/stylesCategoria.css" rel="stylesheet">
-
+<link href="/css/styles.css" rel="stylesheet">
 
 <!-- https://www.pinterest.com/pin/75576099974715878/ -->
 <div class="nav__bar">
