--- a/views/iniciarSesion.hbs
+++ b/views/iniciarSesion.hbs
@@ -39,7 +39,7 @@
 
       <div class="text-center">
         <br>
-        <a href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
+        <a style="color: black;" href="/olvide-password">¿OLVIDASTE LA CONTRASEÑA?</a>
         <br>
         <br>
         <a href="/crear-cuenta" class="txt2 hov1">
