--- a/views/misCompras.hbs
+++ b/views/misCompras.hbs
@@ -13,7 +13,7 @@
     </section>
         <hr>
      
-  
+ <div style="margin-left: 30%;">
          <div class="row add-row ">
              {{#each ordenes as |orden| }}
               <div class="col-md-4 col-sm-4">
@@ -38,6 +38,7 @@
 
        
             {{/each}}
+            </div> 
             </div>
 
 
