--- a/public/css/stylesxD.css
+++ b/public/css/stylesxD.css
@@ -96,18 +96,10 @@
     
   }
   .product_inner button:hover {
-    background: rgb(0, 0, 0);
+    background:#89e7e391;
     color: #ffffff;
   }
-  .product_inner button:before {
-    font-family: FontAwesome;
-    content: "\f07A";
-    color: rgb(255, 0, 0);
-    position: absolute;
-    font-size: 1.5em;
-    margin: 0 -1.5em;
-    
-  }
+  
   .product_inner button:hover:before {
     color: #ff0000;
   }
