--- a/views/camisa.hbs
+++ b/views/camisa.hbs
@@ -12,11 +12,12 @@
     </a>        
 </div>
 
-<main class="main">
+<main class="main" style="background-image: url(https://wallpaperaccess.com/full/729337.png
+); background-size: cover;">
    
     <section class="hero">
         <div class="hero__content">
-            <h2 class="hero__heading">Camisas</h2>
+            <h2 class="hero__heading" style="text-align: center;">Camisas</h2>
             
         </div>
     </section>
