--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -17,8 +17,8 @@
                 <h5 style="color: rgb(0, 0, 0); font-family:'Times New Roman', Times, serif;">{{item.nombre}}</h5>
                 <p style="color: rgb(70, 68, 68);">Talla: {{item.talla}}</p>
                 <p style="color: rgb(70, 68, 68);">L. {{item.precio}}</p>
-                <button><a href="/eliminar/{{this.item._id}}">Eliminar</a></button>
-                <button><a href="/reducir/{{this.item._id}}">Reducir 1</a></button>
+                <button ><a style="color: black;" href="/eliminar/{{this.item._id}}">Eliminar</a></button>
+                <button> <a style="color: black;" href="/reducir/{{this.item._id}}">Reducir 1</a></button>
 
             </div>
             <div class='product_overlay'>
