--- a/views/layouts/auth.hbs
+++ b/views/layouts/auth.hbs
@@ -22,7 +22,10 @@
 <body class="{{typePage}} full-screen sidebar-collapse">
   <!--Inicio del navbar-->
   <nav class="navbar navbar-expand-lg navbar-light ">
-     <a class="btnEclothes" href="/" style="color: black;">e-clothes</a>
+    <a class="navbar-brand" href="/" rel="tooltip" title="Cashize" data-placement="bottom" style="padding-left: 100px;">
+          <img src="/img/logo.png" alt="" width="100" height="100">
+        </a>
+     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
