--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,8 +23,9 @@
   {{!-- Navbar 
 --}}
   <nav class="navbar navbar-expand-lg navbar-light " >
-    <a class="btnEclothes" href="/" style="color: rgb(255, 255, 255); background-color: #89e7e391
-;">e-clothes</a>
+    <a class="navbar-brand" href="/" rel="tooltip" title="Cashize" data-placement="bottom" style="padding-left: 100px;">
+          <img src="/img/logo.png" alt="" width="50" height="50">
+        </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
