--- a/views/manual.hbs
+++ b/views/manual.hbs
@@ -5,8 +5,8 @@
   <head>
     <title>e-clothes</title>
   </head>
-  <body>
-    <h1>Manual de usuario</h1>
+  <body style="background-color: #89e7e391;">
+    <h1 style="text-align: center;">Manual de usuario</h1>
     <iframe src="/uploads/manuales/manual.pdf" width="100%" height="900px">    <!--El pdf del manual tiene que estar en esa ruta, y tiene que llamarse "manual" -->
     </iframe>
   </body>
