--- a/views/ventas.hbs
+++ b/views/ventas.hbs
@@ -3,6 +3,7 @@
 <br>
 <br>
 <br>
+
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         
@@ -19,7 +20,7 @@
 
         <hr>
      
-  
+<div style="margin-left: 30%;">
          <div class="row add-row ">
              {{#each ordenes as |orden| }}
               <div class="col-md-4 col-sm-4">
@@ -44,7 +45,7 @@
                
             {{/each}}
             </div>
-
+</div>
 
 
     </div>
