correcion vista carrito

--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -15,7 +15,6 @@
                 <p style="color: black;">Cantidad: {{qty}}</p>
                 <img src='../uploads/products/{{item.pictures.[0]}}'  >
                 <h5 style="color: rgb(0, 0, 0); font-family:'Times New Roman', Times, serif;">{{item.nombre}}</h5>
-                <p style="color: rgb(70, 68, 68);">Talla: {{item.talla}}</p>
                 <p style="color: rgb(70, 68, 68);">L. {{item.precio}}</p>
                 <button ><a style="color: black;" href="/eliminar/{{this.item._id}}">Eliminar</a></button>
                 <button> <a style="color: black;" href="/reducir/{{this.item._id}}">Reducir 1</a></button>
@@ -136,10 +135,9 @@
                 <p style="color: black;">Cantidad: {{qty}}</p>
                 <img src='../uploads/products/{{item.pictures.[0]}}' width='300'>
                 <h5 style="color: rgb(0, 0, 0); font-family:'Times New Roman', Times, serif;">{{item.nombre}}</h5>
-                <p style="color: rgb(70, 68, 68);">Talla: {{item.talla}}</p>
                 <p style="color: rgb(70, 68, 68);">L. {{item.precio}}</p>
-                <button><a href="/eliminar/{{this.item._id}}">Eliminar</a></button>
-                <button><a href="/reducir/{{this.item._id}}">Reducir 1</a></button>
+                <button ><a style="color: black;" href="/eliminar/{{this.item._id}}">Eliminar</a></button>
+                <button> <a style="color: black;" href="/reducir/{{this.item._id}}">Reducir 1</a></button>
 
             </div>
             <div class='product_overlay'>
